--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -19,9 +19,9 @@
 \Toctrue
 
 % to show labels
-\ShowLabelstrue \advance\hoffset-1cm
+%\ShowLabelstrue \advance\hoffset-1cm
 
-%\def\FootText{(VERSION 1)}
+\def\FootText{(VERSION 2)}
 
 \def\pmt#1{\hbox{\tt[#1]}}
 
