--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -25,7 +25,7 @@
 	year			= "2008"
 }
 
-@article{totem10,
+@Article{totem10,
       author         = "Antchev, G. and Aspell, P. and Atanassov, I. and Avati,
                         V. and Berardi, V. and others",
       title          = "The TOTEM detector at LHC",
@@ -121,7 +121,7 @@
 
 @Article{islam09,
       author         = "Islam, M.M. and Kaspar, J. and Luddy, R.J.",
-      title          = "{Deep-elastic p p scattering at LHC from low-x gluons}",
+      title          = "Deep-elastic p p scattering at LHC from low-x gluons",
       journal        = "Mod.Phys.Lett.",
       volume         = "A24",
       pages          = "485-496",
@@ -178,6 +178,20 @@
      SLACcitation  = "%%CITATION = HEP-PH/0210264;%%"
 }
 
+@Article{bsw10,
+      author         = "Bourrely, C. and Soffer, J. and Wu, T.T.",
+      title          = "Determination of the forward slope in $p~p$ and $\bar
+                        p~p$ elastic scattering up to LHC energy",
+      journal        = "Eur.Phys.J.",
+      volume         = "C71",
+      pages          = "1601",
+      doi            = "10.1140/epjc/s10052-011-1601-x",
+      year           = "2011",
+      eprint         = "1011.1756",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+}
+
 
 @Article{bh99,
      author    = "Block, M. M. and Gregores, E. M. and Halzen, F. and
@@ -194,7 +208,21 @@
      SLACcitation  = "%%CITATION = HEP-PH/9809403;%%"
 }
 
-@article{ppp02,
+@Article{bh11,
+      author         = "Block, Martin M. and Halzen, Francis",
+      title          = "Forward hadronic scattering at 7 TeV: Predictions for
+                        the LHC: An Update",
+      journal        = "Phys.Rev.",
+      volume         = "D83",
+      pages          = "077901",
+      doi            = "10.1103/PhysRevD.83.077901",
+      year           = "2011",
+      eprint         = "1102.3163",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+}
+
+@Article{ppp02,
       author         = "Petrov, V.A. and Prokudin, A.V.",
       title          = "The First three pomerons...",
       journal        = "Eur.Phys.J.",
@@ -203,6 +231,31 @@
       doi            = "10.1007/s100520100838",
       year           = "2002",
       eprint         = "hep-ph/0105209",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+}
+
+@Article{jenkovszky11,
+      author         = "Jenkovszky, L. and Lengyel, A. and Lontkovskyi, D.",
+      title          = "The Pomeron and Odderon in elastic, inelastic and total
+                        cross sections at the LHC",
+      year           = "2011",
+      note           = "* Temporary entry *",
+      eprint         = "1105.1202",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+}
+
+@Article{ryskin11,
+      author         = "Ryskin, M.G. and Martin, A.D. and Khoze, V.A.",
+      title          = "High-energy strong interactions: from `hard' to `soft'",
+      journal        = "Eur.Phys.J.",
+      volume         = "C71",
+      pages          = "1617",
+      doi            = "10.1140/epjc/s10052-011-1617-2",
+      year           = "2011",
+      note           = "* Temporary entry *",
+      eprint         = "1102.2844",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
 }
@@ -280,8 +333,8 @@
 
 @Article{arrington07,
       author         = "Arrington, J. and Melnitchouk, W. and Tjon, J.A.",
-      title          = "{Global analysis of proton elastic form factor data with
-                        two-photon exchange corrections}",
+      title          = "Global analysis of proton elastic form factor data with
+                        two-photon exchange corrections",
       journal        = "Phys.Rev.",
       volume         = "C76",
       pages          = "035205",
@@ -341,6 +394,19 @@
   publisher = "American Physical Society"
 }
 
+@Article{rix66,
+  title = "Separation of Strong and Electromagnetic Effects in Charged-Particle Scattering",
+  author = "Rix, J.  and Thaler, R. M.",
+  journal = "Phys. Rev.",
+  volume = "152",
+  number = "4",
+  pages = "1357--1363",
+  numpages = "6",
+  year = "1966",
+  month = "Dec",
+  doi = "10.1103/PhysRev.152.1357",
+  publisher = "American Physical Society"
+}
 
 @Article{locher67,
 	title = "Relativistic treatment of structure in the Coulomb interference problem",
@@ -356,19 +422,6 @@
 	author = "M. P. Locher"
 }
 
-@Article{rix66,
-  title = "Separation of Strong and Electromagnetic Effects in Charged-Particle Scattering",
-  author = "Rix, J.  and Thaler, R. M.",
-  journal = "Phys. Rev.",
-  volume = "152",
-  number = "4",
-  pages = "1357--1363",
-  numpages = "6",
-  year = "1966",
-  month = "Dec",
-  doi = "10.1103/PhysRev.152.1357",
-  publisher = "American Physical Society"
-}
 
 @Article{islam67,
       author         = "Islam, M.M.",
@@ -391,6 +444,16 @@
      SLACcitation  = "%%CITATION = PHRVA,172,1413;%%"
 }
 
+@Article{franco73,
+      author         = "Franco, V.",
+      title          = "Coulomb-nuclear interference",
+      journal        = "Phys.Rev.",
+      volume         = "D7",
+      pages          = "215-217",
+      doi            = "10.1103/PhysRevD.7.215",
+      year           = "1973",
+}
+
 @Article{islam76,
 	title = "Impact parameter representation from the Watson-Sommerfeld transform",
 	journal = "Nuclear Physics B",
@@ -404,6 +467,18 @@
 	url = "http://www.sciencedirect.com/science/article/B6TVC-473DK4R-21/2/a3da8bad2cc2f3b1ddc090d5edb398df",
 	author = "M. M. Islam"
 }
+
+@Article{buttimore78,
+      author         = "Buttimore, Nigel H. and Gotsman, E. and Leader, E.",
+      title          = "SPIN DEPENDENT PHENOMENA INDUCED BY ELECTROMAGNETIC
+                        HADRONIC INTERFERENCE AT HIGH-ENERGIES",
+      journal        = "Phys.Rev.",
+      volume         = "D18",
+      pages          = "694-716",
+      doi            = "10.1103/PhysRevD.18.694",
+      year           = "1978",
+}
+
 
 @Article{cahn82,
 		author="R. Cahn",
