--- a/2010/thesis/elastic.tex
+++ b/2010/thesis/elastic.tex
@@ -15,12 +15,12 @@
 
 \em{The model of Bourrely, Soffer and Wu}
 
-\bref{wu70,bsw79,bsw84,bsw03}
+\bref{wu70,bsw79,bsw84,bsw03,bsw10}
 
 \em{The model of Block and Halzen}
 
 
-\bref{bh99}
+\bref{bh99,bh11}
 
 \section[el pred]{Predictions for the LHC}
 
@@ -46,9 +46,137 @@
 \def\WY{West-Yennie}
 \def\WaY{West and Yennie}
 
-\> genneral problems
-\>> PROBLEM 1: proton form-factors have been determined in ep scattering, how to apply them to pp scattering?
+In \Sc{el models} we discussed the contribution of the strong interaction to the elastic scattering of nucleon. The strong interaction is obviously the most important one, however, there are three more fundamental forces: electromagnetic, weak and gravitational. The gravity is too weak on the mass and length scales typical for particle physics experiments and can be safely neglected therefore. The carriers of the weak force are much heavier that a typical four-momentum transfer $t\approx 1\un{GeV^2}$ and thus can be neglected too. The only other relevant interaction is the electromagnetic.
 
+The scattering amplitude due to the electromagnetic force can be calculated in a number of ways. Here we will use two -- eikonal and QED. The former since the eikonal formalism will be used to discuss the Coulomb-hadron interference and the latter since we consider it the most appropriate framework.
+
+\vskip\baselineskip
+\em{Electromagnetic scattering in QED}
+\vskip\baselineskip
+
+QED is a relativistic QFT that can naturally account for the structure of the proton and its anomalous magnetic moment (see e.g. Sc.~6.2 in \bref{peskin} or Sc.~5.2 in \bref{chyla}). These are described by two form factors, the electric $G_E(t)$ and the magnetic $G_M(t)$, which are related to the distributions of charge and magnetization in the proton \bref{sachs62}. The leading contribution (one photon exchange, $\O{\al^2}$) to the cross-section has been calculated in \bref{block06} (Eq.~(29)). Since we are interested in the LHC energies ($\approx 7\un{Tev}$) and momentum transfers smaller than $|t| = 10\un{GeV^2}$, we may use high energy ($m/p\to 0$) and low-momentum transfer ($t/p^2\to 0$) limits. Then, the result reads (both for $\rm pp$ and $\rm \bar p p$ scattering)
+\eqref{{\d\si^{\rm EM}_{\rm QED, OPE}\over\d t} = {4\pi \al^2\over t^2} G_{\rm eff}^4(t)\ .}{el dsdt em}
+The symbol $G_{\rm eff}$ stands for an ''effective'' form factor that is a combination of the electric and magnetic form factors:
+\eqref{G^2_{\rm eff}(t) = {G_E(t)^2 + \ta G_M(t)^2 \over 1 + \ta},\qquad \ta = - {t\over 4m^2}\ .}{el ff eff}
+For very low four-momentum transfers $|t| \ll m^2$, the role of the magnetic form factor is negligible and one can put $G_{\rm eff} = G_E$. This is approximation is used almost universally (\bref{kl97} \TODO{many others}). However, as $|t|$ raises to about $m^2$, the influence of proton's magnetic moment can not be neglected anymore (as already stated by Block \bref{block06}).
+
+The form factors of proton have typically been determined from the measurements of the elastic $\rm ep$ scattering. The electrons serve as a point-like projectile that probes the spatial structure of the proton. \TODO{universality of the form factors}.
+This has been a number of analyses done, gradually accounting for the increasing amount of experimental data. One of the first results was the paper of Hofstadter \bref{hofstadter58}, who parameterized both form factors by a dipole formula
+\eqref{G_E = F_D (1 - \ta\ka),\quad G_M = F_D (1+\ka),\quad F_D = \left( \La^2\over \La^2 - t \right)^2\ ,\qquad \La^2 = 0.71\un{GeV^2}\ .}{el ff dipole}
+$\ka\doteq 1.793$ stands for the anomalous magnetic moment of the proton. In this parameterization, the effective form factor would be
+\eqref{G^2_{\rm eff,D}(t) = F_{\rm D}^2 (1 + \ka^2 \ta)\ .}{el ff eff dipole}
+Again, the approximation $G_{eff,D}\approx F_D$ can be justified only for $|t| \ll m^2$.
+
+Hoffstadter's parameterization has been improved by Borkowski et al.~\bref{borkowski74,borkowski75}. They have parameterized electric and magnetic form factors by sums of four poles:
+\eqref{
+G_{E} = \sum_{i=1}^4 {{c_{E, i}}\over w_{E, i} - t},\qquad
+G_{M} = \mu\sum_{i=1}^4 {{c_{M, i}}\over w_{M, i} - t}
+\ .}{el ff borkowski}
+The parameter values can be found in Tb.~4 in \bref{borkowski75}.
+
+Kelly \bref{kelly04} proposed a class of form factor parameterization that is consistent with dimensional scaling at high $|t|$. His parameterization is given by a ratio of two polynomials
+\eqref{G(t) = {\sum_k^n a_k \ta^k \over \sum_k^{n+2} b_k \ta^k}\ .}{el ff kelly}
+Since the degree of the polynomial in the denominator is higher by two compared to the one in the numerator, the form factor falls off as $|t|^{-2}$ as $|t|\to\infty$. Kelly's parameterization has been used by Arrington \bref{arrington07} and Puckett \bref{puckett10} who has included more recent data sets. \TODO{TPE effect}.
+
+\Fg{el ff comparison} compares the discussed form factors. We observe very little difference among Kelly's, Arrington's and Puckett's form factors. On the other hand, for $|t| \gs 0.1\un{GeV^2}$, there is significant difference between the effective (solid lines) and electric (dashed lines) form factors. The same holds for the difference between Hofstadter's effective form factor and the dipole function $F_D$ (dotted line).
+
+\fig{fig/pdf/el_ff_comparison.pdf}{el ff comparison}{Comparison of electric (dashed) and effective (solid) form factors. The dotted line represents dipole expression $F_D$.}
+
+\vskip\baselineskip
+\em{Electromagnetic scattering in eikonal description}
+\vskip\baselineskip
+
+The terms ''eikonal'' or ''impact-parameter'' descriptions are used in a number of meanings, thus let's make it clear. Adachi et. al \bref{adachi65} formulated an \em{impact-parameter representation} of a scattering amplitude. That is an amplitude $F(s, t)$ is transformed into a function $A(s, b)$, where $b$ has the meaning of impact-parameter. This procedure is mathematically consistent, however, does not present an algorithm to calculate either of the amplitudes.
+
+Islam developed his own \em{eikonal formalism} as a relativistic generalization of the eikonal approximation to QM. He defines an ''optical potential'' $V(s, r)$ (depending on the energy), which is the starting point in his algorithm. However, it is far from evident, what properties does this new ''potential'' shares with the one used in the traditional QM. Most importantly, whether the optical potential is additive.
+
+\em{Eikonal approximation} is ... (see e.g. Sc.~2.3 in \bref{barone} or Sc.? in \bref{formanek qm}). It sais
+\eqref{F(t) = {s\over 2i}\int b\,\d b\,J_0(b\sqrt{|t|})\,\left( e^{2i\de(b)} - 1 \right)}{el eik rep}
+(using the notation of Cahn \bref{Cahn82}). The \em{eikonal} function is given as
+\eqref{\de(b) = ... \int_{-\infty}^{\infty} V(\vec b, z)\ \d z,}{el eik app}
+where $V(x, y, z)$ is a potential. As the eikonal is linear in potential, it retains the property of additivity. The eikonal can also be related to the Born approximation of a scattering amplitude
+\eqref{\de(b) = {1\over s} \int q\,\d q\,J_0(bq)\, F_{\rm Born}(t = -q^2)}{el eik app born}
+
+With the Coulomb potential $V(r) = \pm ... \al/r$ one gets \TODO{ref}
+\eqref{F^{\rm C}_{\rm Born} = \pm ... {\al\over t}}{el coul born}
+From point-like to charge distributions of both target and projectile, it hopefully adds a factor of $F^2(t)$. Compare to \Eq{el dsdt em} (Born -- OPE). Take sign from eikonal formula (note that QED amp. has different signs too) and take FF from QED calculation. In that sense, it is not a Coulomb scattering anymore (magnetic influence is accounted for too), but we will keep the notation.
+
+
+Interference -- what is the amplitude describing hadronic and electromagnetic forces acting simultaneously? Several approaches...
+
+\vskip\baselineskip
+\em{Interference in non-relativistic QM}
+\vskip\baselineskip
+
+Bethe derived \bref{bethe58} by WKB approximation
+\eqref{F^{C+H}(t) = F^C(t) e^{i \al \Ph(t)} + F^H(t)}{el FCH decomp C}
+with the Coulomb-hadronic phase $\Phi$
+\eqref{\Phi_{\rm Bethe}(t) = 2 \log {1.06\over a\sqrt{t}}}{el phase bethe}
+
+No FF, $F_{\rm C}$ is just a symbol...
+
+\vskip\baselineskip
+\em{Interference in QFT / Feynman diagrams}
+\vskip\baselineskip
+
+Yennie et al. \bref{yennie61}, Meister and Yennie \bref{yennie63}
+
+Rix and Thaler \bref{rix66}
+
+Locher \bref{locher67}
+
+\WaY \bref{wy68}
+
+The same decomposition as \Eq{el FCH decomp C}, $F_{\rm C}$ only a symbol for ...
+
+\eqref{\Phi_{\rm WY} = - \log {t\over t_{\rm min}} - \int\limits_{t_{\rm min}} {\d t'\over |t' - t|} \left( {F^H(t')\over F^H(t)} - 1 \right)}{el phase WY}
+Note that Eq.(23) in \bref{wy68} is likely to contain a missprint: the sign of the second term shall read minus.
+
+If $F^H(t) \propto e^{Bt/2}$, then the phase would simplify (for low scattering angles and high energies) to
+\eqref{\Phi_{\rm SWY} = - \left(\log {B|t|\over 2} + \ga \right) \ ,}{el phase SWY}
+where $\ga \doteq 0.577$ is the Euler's constant.
+
+
+
+\vskip\baselineskip
+\em{Interference in eikonal description}
+\vskip\baselineskip
+
+Islam \bref{islam67}
+
+
+Cahn \bref{cahn82}
+
+\eqref{F^{C+H}(t) = F^C(t) + F^H(t) e^{i \al \Ps(t)} }{el FCH decomp H}
+
+No FF
+
+\eqref{\Ps_{\rm Cahn} = \lim\limits_{t_{\rm min} \to -\infty} \left[ \log {t\over t_{\rm min}} - \int\limits_{t_{\rm min}}^{0} {\d t'\over |t' - t|} \left ( {F^H(t')\over F^H(t)} - 1 \right) \right]}{el phase Cahn}
+
+\TODO{Check signs}
+
+Simplification of $G_{\rm eff} = F_D$ leads to
+\eqref{\nu_{\rm Cahn} = - {4t\over \La^2} \log {\La^2\over -4t} + {2t\over \La^2}}{el nu Cahn}
+Independent of $s$
+
+\KaL{} \bref{kl94}: generalization for form factors
+
+Selyugin \bref{selyugin99}
+
+\eqref{\nu_{\rm Selyugin} = c_1 \log (1 - c_2^2 t),\qquad c_1 = 0.11,\qquad c_2 = 200\un{GeV^{-1}}\ .}{el nu Selyugin}
+Again, independent of $s$
+
+Kopeliovich and Tarasov \bref{kopeliovich01}
+
+\vskip\baselineskip
+Data fits with different interference formulae: \bref{ppp03,ppp05}
+
+\vskip\baselineskip
+\em{Critique and checks}
+\vskip\baselineskip
+
+
+\iffalse
 \> problems of Cahn formula (inherited and not solved in \KL{} treatment)
 \>> PROBLEM 2: The case without form factors gives just the \WY{} formula. If \WY{} is wrong, then Cahn is wrong too. The formula with form factors (and thus \KL too) is just a trivial generalization which does not remove the basic issue.
 \>> PROBLEM 3: Some approximations may be a bit too crude (e.g. neglecting $\al \log {t\over t_{\rm min}}$)
@@ -63,15 +191,6 @@
 
 \vskip1cm
 
-\iffalse
-Out of the four fundamental forces, only two are important for forward scattering of protons, namely strong and electromagnetic. The gravitational force is too weak and the weak force has a negligible contribution only (\TODO{suppressed by the mass of its bosons}).
-
-Bethe derived \bref{bethe58}
-\eqref{F^{C+H}(t) = F^C(t) e^{i \al \Ph(t)} + F^H(t)}{el FCH decomp}
-with the Coulomb-hadronic phase $\Phi$
-\eqref{\Phi_{\rm Bethe}(t) = 2 \log {1.06\over a\sqrt{t}}}{el phase bethe}
-\TODO{explain}
-\fi
 
 Before discussing the problems in a greater detail, let us make a comment about the Coulomb-hadronic interference phase. Many authors (including Bethe \bref{bethe58} and \WY{} \bref{wy68}) decomposed the full amplitude in the following way
 \eqref{F^{C+H}(t) = F^C(t) e^{i \al \Ph(t)} + F^H(t)\ .}{el FCH decomp}
@@ -84,32 +203,6 @@ Here we took the liberty to exponentiate the factor $1+ia\Ps$. This modification
 
 \TODO{Here, $F^C$ is merely a symbol for $\al s/t$, it is real!}
 
-{\bf PROBLEM 1}
-
-The form factors of proton have been determined from the measurements of the elastic ep scattering. The electrons serves as a point-like projectile that probes the spatial structure of the proton. This process can be described by QED, see e.g. Sc. ~in \bref{peskin} or Sc.~in \bref{chyla}. The electron vertex is the standard $-ie\ga^\mu$, while for the proton one uses the most general vertex function that satisfies ...:
-\eqref{\Ga^\mu = F_1(q^2) \ga^\mu + i{\ka\over 2m} F_2(q^2) \si^{\mu\nu} q_\nu\ ,\qquad \si^{\mu\nu} = {i\over 2} [\ga^\mu, \ga^\nu]\ .}{}
-The functions $F_1$ and $F_2$ are the form factors depending on the four-momentum transfer squared. The result in one-photon exchange approximation is the Rosenbluth formula \TODO{ref}, which enables to extract the form-factors from experimental data. This has been done by several authors, gradually accounting for the increasing amount of experimental data. One of the first results was the paper of Hofstadter \bref{hofstadter58}, who parameterized both form factors by dipole formula
-\eqref{F_1 = F_2 = F_{D} \equiv {\La^2\over \La^2 + q^2}\ ,\qquad \La^2 = 0.71\un{GeV^2}\ .}{el ff dipole}
-This result has been improved by Borkowski et al.~\bref{borkowski74,borkowski75}. Their fit is done in terms of the electric form factor $G_E$ and the magnetic one $G_M$ (see e.g. Sachs \bref{sachs62})
-\eqref{G_E = F_1 - {q^2\over 2m} F_2\ ,\qquad G_M = {1\over 2m} F_1 + F_2}{el ff el mag}
-Each of them is parameterized by a sum of four poles:
-\eqref{G_{E/M} = \sum_{i=1}^4 {{c_i}\over w_i + q^2}\ .}{el ff borkowski}
-The parameters $c_i$ and $w_i$ are different for electric and magnetic form factors and can be found in \TODO{table}.
-
-In short while, we will need the inverse of the definition of the electric and magnetic form-factors
-\eqref{F_1 = {G_E + {q^2\over 2m} G_M\over {1 + {q^2\over 4m^2}}}\ , \qquad F_2 = {G_M - {1\over 2m} G_E\over {1 + {q^2\over 4m^2}}}\ .}{el ff el mag inv}
-
-The last question is how to apply these form factors to proton-proton scattering. QED provides this answer quite easily -- one just needs to use the generalized vertex $-ie\Ga^\mu$ for both protons. In the one-photon exchange approximation (keeping only the $t$-channel diagram) one can obtain differential cross-section
-\eqref{{\d\si\over\d t} \propto {\al^2\over t^2} F_1^4(q^2 = -t)\ ,}{el cs coulomb real proton}
-where we have neglected all terms containing fraction $m/p\approx 0.938\un{GeV}/10\un{TeV}\approx 10^{-4}$ and used the fact that the interesting CMS scattering angles $\th<<1$ (for instance $|t|=1\un{GeV^2}$ and $p=10\un{TeV}$ yields $\th=10^{-4}$). Certain steps of the calculation have been performed with TamarA package \bref{tamara} to Mathematica \bref{mathematica}. A bit different result has been obtained by Block \bref{block06} (see his Eq.~(29) with terms $t/E_{\rm lab}$ and $m/E_{\rm lab}$ neglected) \TODO{Check it!}. Anyway, the message is (and Block spells it out explicitly) that the contribution of the magnetic scattering is important. In other words, one can not just use $G_E$.
-%The important outcome is that the only the form factor $F_1$ contributes to the (high energy and low-angle) scattering cross-section. Thus, if one decides to use Borkowski form factors, one should use the $F_1$, not simply $G_E$ as suggested by \KL{} in \bref{kl94}.
-
-\fig{fig/pdf/el_ff_comparison.pdf}{el ff comparison}{Comparison of form factors.}
-
-The modulus of the corresponding amplitude can be written
-\eqref{|F^C| = {\al s\over t}\, F^2_1(t)\ ,}{el amp coulomb mod}
-hence it looks plausible to use the Born amplitude in form:
-\eqref{F^C_{\rm Born} = -{\al s\over t}\, F^2_1(t)\ ,}{el amp coulomb}
 
 {\bf PROBLEM 2}
 
@@ -148,7 +241,7 @@ The importance of the interference can be measured with the help of this functio
 \eqref{Z(t) = {|F^{\rm C+H}|^2 - |F^{\rm C}|^2 - |F^{\rm H}|^2\over |F^{\rm C+H}|^2}\ .}{el Z}
 It is plotted in \Fg{el cic noff Z} together with function
 \eqref{\zeta = {2\over {|F^H|\over |F^C|} + {|F^C|\over |F^H|}}}{el zeta}
-which measures the relative difference between the hadronic and Coulomb amplitude. If they are equal, $\zeta = 1$, if one is much larger, $\ze$ tends to $0$. If one substitutes the decomposition \Eq{el FCH decomp2} to \Eq{el Z}, one easily finds that $Z$ must be very small (therefore the interference unimportant) if $F^C$ is much larger than $F^H$. A similar argument can be made for the opposite situation, where $F^H >> F^C$, but there one must employ also the fact that the phase is almost real. Thus it becomes more a rule of thumb than an exact statement. Still, looking at the \Fg{el cic noff Z} one can find quite good relation between the peaks of the importance function $Z$ and the ``closeness'' function $\zeta$.
+which measures the relative difference between the hadronic and Coulomb amplitude. If they are equal, $\zeta = 1$, if one is much larger, $\ze$ tends to $0$. If one substitutes the decomposition \Eq{el FCH decomp2} to \Eq{el Z}, one easily finds that $Z$ must be very small (therefore the interference unimportant) if $F^C$ is much larger than $F^H$. A similar argument can be made for the opposite situation, where $F^H \gg F^C$, but there one must employ also the fact that the phase is almost real. Thus it becomes more a rule of thumb than an exact statement. Still, looking at the \Fg{el cic noff Z} one can find quite good relation between the peaks of the importance function $Z$ and the ``closeness'' function $\zeta$.
 
 \fig{fig/pdf/el_cic_noff_Z.pdf}{el cic noff Z}{Left: the interference importance function $Z$. Right: $\zeta$ function reaches one if $|F^C| = |F^H|$ and tends to zero if one of the amplitudes is much larger that the other one.}
 
@@ -186,7 +279,6 @@ from sufficiently high $q'^2$ will be negligible. This means that would could cu
 
 The last statement could be demonstrated directly in Eq.~(26) in \bref{kl94}. Let's split the integration region into two: $(t_{\rm min}, -\mu^2)$ and $(-\mu^2, 0)$. Again, $\mu$ is such that $F^H(-\mu^2)$ is small (or more precisely negligible wrt. the denominator $F^H(t)$). Then one can show that the integral over the first integration region vanishes. That is, the lower bound is quite arbitrary, it only needs to be value large enough.
 
-\iffalse
 \eqref{F^{\rm C+H}_{\rm WY} = F^C(t) e^{i\al\Ph(t) + F^H(t) }}{el WY}
 \TODO{Comment on FC and FH, c.f. Eq.~(6) in \bref{wy68}}
 
