--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -18,10 +18,12 @@
 \Reftrue
 \Toctrue
 
-% to show labels
-%\ShowLabelstrue \advance\hoffset-1cm
-
-\def\FootText{(VERSION 2)}
+\iftrue
+	% to show labels
+	\ShowLabelstrue \advance\hoffset-1cm
+\else
+	\def\FootText{(VERSION 2)}
+\fi
 
 \def\pmt#1{\hbox{\tt[#1]}}
 
